--- a/public/frontend/assets/css/footer.css
+++ b/public/frontend/assets/css/footer.css
@@ -3,7 +3,7 @@
     padding: 2rem 0;
     margin-top: 5rem;
   }
-  
+
   .h3 {
     /* font-family: "Dancing Script", cursive; */
     color: #d2ccd1b6;
@@ -11,33 +11,32 @@
     font-weight: 400;
     margin-bottom: 1rem;
   }
-  
+
   .footer-list {
     padding: 0;
     margin: 0;
     display: block;
   }
-  
+
   li {
     /* font-family: "Dancing Script", cursive; */
     display: block;
     color: white;
     margin-bottom: 0.8rem;
   }
-  
+
   a {
     text-decoration: none;
     color: white;
     font-size: 1rem;
   }
-  
+
   a:hover {
     text-decoration: underline;
   }
-  
+
   .social-media {
     display: flex;
     justify-content: space-start;
-    margin-top: -7rem;
+    /* margin-top: -7rem; */
   }
-  
