--- a/public/frontend/assets/css/detail.css
+++ b/public/frontend/assets/css/detail.css
@@ -1,17 +1,20 @@
-img {
-	width: 100%;
-	max-width: 100%;
-	margin-top: 10em;
+.home-banner img {
+    width: 100%;
+    max-width: 100%;
+    /* margin-top: 15em; */
 }
 
-.rating-reviews{
-	margin-top: 1em;
-	margin-bottom: 1em;
-	font-size: 1.2em;
-	
-  }
-  
+.rating-reviews {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-size: 1.2em;
+
+}
+
 .mar {
-	padding-top: 10em;
+    /* padding-top: 15em; */
 }
 
+.single-product {
+    margin-top: 10em;
+}
