--- a/public/frontend/assets/css/featured.css
+++ b/public/frontend/assets/css/featured.css
@@ -24,7 +24,7 @@
 .btn {
     border: 1px solid #202c32;
     border-radius: 50px;
-    font-size: 1rem;
+    font-size: 1em;
     padding: 14px 50px;
     background: transition;
     font-weight: 100;
@@ -86,11 +86,11 @@
 }
 
 .featured .featured-slider .box-book {
-    width: 15rem;
-    margin: 2rem 0;
+    width: 16em;
+    margin: 2em 0;
     position: relative;
     overflow: hidden;
-    border: 0.05rem solid #202c325e;
+    border: 0.05em solid #202c325e;
     border-radius: 0.9rem;
     margin: 0.5rem;
     text-align: center;
@@ -118,17 +118,17 @@
 .featured .featured-slider .box-book .image .discount-tag {
     position: absolute;
     background: #fff;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 0.5em;
+    border-radius: 1em;
     color: #165372;
-    right: 10px;
-    top: 50px;
+    right: .1em;
+    top: 2em;
     text-transform: capitalize;
 }
 
 .featured .featured-slider .box-book .image img {
-    height: 15rem;
-    margin: 0.56rem 0;
+    height: 15em;
+    margin: 0.56em 0;
 }
 
 .featured .featured-slider .box-book .icons {
@@ -148,8 +148,8 @@
 
 .featured .featured-slider .box-book .icons a {
     color: #202c32;
-    font-size: 1rem;
-    padding: 0.6rem;
+    font-size: 1em;
+    padding: 0.6em;
     text-decoration: none;
 }
 
@@ -163,18 +163,18 @@
 }
 
 .featured .featured-slider .box-book .content .h3 {
-    font-size: 1rem;
+    font-size: 1em;
     color: #202c32;
 }
 
 .featured .featured-slider .box-book .content .price {
-    font-size: 1.4rem;
+    font-size: 1.4em;
     color: #202c32;
-    padding-top: 0.2rem;
+    padding-top: 0.2em;
 }
 
 .featured .featured-slider .box-book .content .price .actual-price {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     color: #6a8da0;
     text-decoration: line-through;
 }
