--- a/public/frontend/assets/css/navbar.css
+++ b/public/frontend/assets/css/navbar.css
@@ -77,7 +77,7 @@ nav ul li .nav-link {
     /* right:10%; */
     letter-spacing: 2px;
     font-size: 1.3rem;
-    text-decoration: pxnone;
+    text-decoration: none;
 }
 
 /* nav ul li .nav-link:hover{
