--- a/public/frontend/assets/css/signin.css
+++ b/public/frontend/assets/css/signin.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     /* background: rgba(255, 255, 255, 0.925); */
-    background-image: url(img/Background/Background3.jpg);
+    background-image: url('frontend/assets/img/Background/Background3.jpg');
     background-size: cover;
     position: fixed;
     top: 0;
@@ -13,8 +13,8 @@
     width: 100%;
 }
 
-.Signin-form-container form{
-    background: #d2ccd1b6; 
+.Signin-form-container form {
+    background: #d2ccd1b6;
     border: .5rem solid #cdd7dba8;
     width: 40rem;
     padding: 3rem;
@@ -22,10 +22,10 @@
     border-radius: 1.5rem;
     margin-top: -5%;
     text-align: center;
-    
+
 }
 
-.Signin-form-container form .form-mail-password input{
+.Signin-form-container form .form-mail-password input {
     display: block;
     width: 350px;
     height: 40px;
@@ -37,16 +37,16 @@
     background: transparent;
 }
 
-.Signin-form-container form .form-check{
+.Signin-form-container form .form-check {
     display: flex;
     flex: space-between;
 }
 
-.Signin-form-container form .form-check label{
+.Signin-form-container form .form-check label {
     margin-left: .5rem;
 }
 
-.Signin-form-container button{
+.Signin-form-container button {
     width: 350px;
     height: 40px;
     font-size: 20px;
@@ -58,12 +58,12 @@
     cursor: pointer;
 }
 
-.Signin-form-container button:hover{
+.Signin-form-container button:hover {
     color: #fff;
 }
 
 
-.Signin-form-container #close-signin-btn{
+.Signin-form-container #close-signin-btn {
     position: absolute;
     top: 1.5rem;
     right: 2.5rem;
