--- a/public/frontend/assets/css/details.css
+++ b/public/frontend/assets/css/details.css
@@ -1,7 +1,7 @@
-.detail-container {
+/* .detail-container {
     padding: 50rem;
     margin: 20rem;
     width: 100%;
     height: 100%;
     background-color: #fff;
-}
+} */
