--- a/public/frontend/assets/css/search.css
+++ b/public/frontend/assets/css/search.css
@@ -1,32 +1,32 @@
-/* .search-form{
-    width:30rem;
-    height: 2rem;
-    border: .1rem solid rgba(0, 0, 0, .1);
-    border-radius: .5rem;
-    overflow:hidden;
-    background-color: #fff;
-    display: flex;
-    align-items: start center;
+.search-form {
+    margin: 14px auto;
+    width: 80%;
+    position: relative;
 }
 
-.search-form input{
-    font-size: 1.2rem;
-    padding-right: 1.5rem;
-    color: #444;
+.search-box {
+    padding: 10px 12px 10px 34px;
+    width: 300px;
+    max-width: 100%;
+    font-size: 14px;
 }
 
-.search-form label:hover{
-    color: rgb(28, 103, 165);
-} */
-.box-search{
+.search-icon {
+    color: gray;
+    position: absolute;
+    top: 12px;
+    left: 12px;
+}
+
+.box-search {
     position: absolute;
     top: 25%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 
 }
 
-.box-search input{
+.box-search input {
     position: relative;
     display: inline-block;
     font-size: 20px;
@@ -34,7 +34,7 @@
     transition: .5s;
 }
 
-.box-search input[type="text"]{
+.box-search input[type="text"] {
     background: #fff;
     width: 350px;
     height: 50px;
@@ -44,7 +44,7 @@
     border-radius: 25px 0 0 25px;
 }
 
-.box-search input[type="submit"]{
+.box-search input[type="submit"] {
     position: relative;
     border-radius: 0 25px 25px 0;
     width: 150px;
@@ -55,7 +55,7 @@
     background: #ffc107;
 }
 
-.box-search input[type="submit"]:hover{
+.box-search input[type="submit"]:hover {
     border-color: #f1ff5c;
     color: white;
     box-shadow: 0 .5em 0.5em -.4em #f1ff5c;
