--- a/public/admin_map/admin.css
+++ b/public/admin_map/admin.css
@@ -1,7 +1,12 @@
+body {
+    background-color: rgb(255, 255, 246);
+}
+
 header {
     width: 70%;
     text-align: center;
-    background-color: rgb(247, 236, 222);
+    background-color: rgb(246, 243, 174);
+    border-radius: 10px;
 }
 
 h1 {
@@ -11,6 +16,16 @@ h1 {
 
 h2 {
     text-align: center;
+}
+
+a {
+    font-size: 16px;
+}
+
+.subheader {
+    width: 65%;
+    background-color: rgb(238, 240, 241);
+    border-radius: 10px;
 }
 
 nav {
@@ -25,15 +40,18 @@ div {
     justify-content: center;
 }
 
-/* h2 {
-    color: blue;
+.home {
+    margin: center;
+    width: 50%;
+    background-color: rgb(221, 220, 220);
+    flex-direction: column;
+    border-radius: 10px;
 }
 
-div {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-} */
+div > form {
+    background-color: lightgray;
+    padding: 10px;
+}
 
 th {
     /*width: 120px;*/
@@ -44,6 +62,7 @@ th {
 
 td {
     min-width: 50px;
+    max-width: 500px;
     height: 20px;
     text-align: center;
     background-color: rgb(216, 224, 224);
@@ -56,6 +75,14 @@ caption {
     background-color:rgb(173, 204, 231);
 }
 
+button {
+    opacity: 0.8;
+    border-radius: 4px;
+}
+button:hover {
+    opacity: 1;
+}
+
 .button {
     border: 2px black solid;
     padding: 10px 22px;
@@ -63,23 +90,30 @@ caption {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    /* width: 160px;
-    height: 30px; */
-  }
+    border-radius: 7px;
+    opacity:0.8;
+}
+
+.button:hover {
+    opacity:1;
+}
 
 .index {
     width: 160px;
     padding: 20px 44px;
+    border-radius: 12px;
 }
 
 .add {
     background-color: #77b878;
     color: white;
+    width: 160px;
 }
 
 .nav {
-    background-color: rgb(175, 219, 231);
+    background-color: rgb(117, 205, 230);
     color: black;
+    width: 160px;
 }
 
 .shop {
@@ -92,9 +126,22 @@ caption {
 
 .edit {
     background-color: rgb(202, 202, 131);
+    color: black;
 }
 
 .remove {
     color: black;
     background-color:rgba(219, 16, 16, 0.555);
+}
+
+.btn {
+    border: 2px black solid;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 7px;
+    opacity:0.8;
+    width: 210px;
 }
